--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
             <div class="img-topo-site">
               <img
-                src="images/pessoa.png"
+                src="images/Jonatan-Hexagono.png"
                 alt="Imagem ilustrativa de desenvolvedor"
               />
             </div>
